# iroh-doctor

./: Cargo.toml  README.md  deny.toml  flake.nix  log.txt
.github/workflows/: ci.yaml  project.yaml  release.yaml
examples/: diagnose.rs
iroh-doctor/: Cargo.toml
iroh-doctor-ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
iroh-doctor-ui/src/: App.tsx  bindings.ts  styles.css
iroh-doctor-ui/src-tauri/: Cargo.toml  tauri.conf.json
iroh-doctor-ui/src-tauri/capabilities/: main.json  mobile.json
iroh-doctor-ui/src-tauri/src/: lib.rs  main.rs
iroh-doctor-ui/src/components/: AcceptedConnScreen.tsx  AcceptingConnScreen.tsx  ConnectingScreen.tsx  ConnectionScreen.tsx  ErrorScreen.tsx  HomeScreen.tsx  ProgressBar.tsx  QrScannerScreen.tsx  ScreenWrapper.tsx
iroh-doctor/src/: config.rs  doctor.rs  lib.rs  main.rs  protocol.rs
src/: config.rs  doctor.rs  lib.rs  logging.rs  main.rs  metrics.rs  monitor.rs  nat_classifier.rs  progress.rs  udp_conn.rs
src/commands/: accept.rs  connect.rs  mod.rs  plot.rs  port_map.rs  relay_urls.rs  report.rs  swarm_client.rs
src/swarm/: client.rs  config.rs  execution.rs  mod.rs  net_report_ext.rs  rpc.rs  runner.rs  transfer_utils.rs  types.rs
src/swarm/tests/: connectivity.rs  latency.rs  mod.rs  protocol.rs  throughput.rs
