[package]
name = "iroh-doctor"
version = "0.95.0"
edition = "2021"
readme = "README.md"
description = "Diagnose and test iroh in your network configuration"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-doctor"
keywords = ["networking", "p2p", "holepunching", "diagnostics", "iroh"]

[dependencies]
anyhow = "1.0.90"
async-channel = "2.3.1"
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive"] }
console = "0.16"
crossterm = "0.29"
derive_more = { version = "2.0", features = ["display", "from_str"] }
dirs-next = "2.0.0"
futures-lite = "2.3.0"
futures-util = "0.3"
hex = "0.4.3"
indicatif = { version = "0.18", features = ["tokio"] }
iroh = { version = "0.95", features = ["metrics"] }
iroh-base = { version = "0.95" }
iroh-metrics = { version = "0.37", features = ["service", "static_core"] }
iroh-n0des = { version = "0.6.0" }
iroh-relay = { version = "0.95" }
netwatch = { version = "0.12" }
n0-watcher = "0.5"
pkarr = { version = "5", default-features = false}
portable-atomic = "1.9.0"
postcard = "1.0.10"
portmapper = "0.11"
prometheus-client = "0.24"
quinn = { package = "iroh-quinn", version = "0.14" }
rand = "0.9"
ratatui = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.11.0"
ssh-key = { version = "0.7.0-rc.3", features = ["ed25519", "std", "rand_core"] }
tokio = "1.40.0"
tokio-util = "0.7.12"
toml = { version = "0.9", features = ["preserve_order"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webpki-roots = "1.0"
ed25519-dalek = "3.0.0-pre.1"
irpc = { version = "0.11", features = ["derive", "default"] }
irpc-iroh = { version = "0.11" }
rcan = "0.2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5.2"

[dev-dependencies]
iroh-base = { version = "0.95.0" }
url = "2.5.2"

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", branch = "feat-multipath" }
iroh-base = { git = "https://github.com/n0-computer/iroh", branch = "feat-multipath" }
iroh-relay = { git = "https://github.com/n0-computer/iroh", branch = "feat-multipath" }
irpc = { git = "https://github.com/n0-computer/irpc", branch = "feat-multipath" }
irpc-iroh = { git = "https://github.com/n0-computer/irpc", branch = "feat-multipath" }
iroh-quinn = { git = "https://github.com/n0-computer/quinn", branch = "main-iroh" }
iroh-quinn-proto = { git = "https://github.com/n0-computer/quinn", branch = "main-iroh" }
iroh-quinn-udp = { git = "https://github.com/n0-computer/quinn", branch = "main-iroh" }
